src/objects/Debate__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>EA_Campaign__c</referenceTo>
        <relationshipLabel>Debates</relationshipLabel>
        <relationshipName>Debates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organiser</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Debates Started</relationshipLabel>
        <relationshipName>Debates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text_of_debate__c</fullName>
        <label>Text of debate</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Debate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Topic</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Debates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>